last modify before final project
commit 538f9bcb9a0b8408238dc80b729be60933286deb
Author: Jamie <jamie.yjchen@gmail.com>
Date:   Mon Feb 15 21:28:30 2021 -0800

    add dots on owl carousel

commit 54f3625ca58d031933bdfd1e37d4c16f50931a80
Author: Jamie <jamie.yjchen@gmail.com>
Date:   Mon Feb 15 20:54:18 2021 -0800

    remove unnecessary files

commit 0c0e2b12f9d692ad9cea836d9f1fe2fac94d824a
Author: Jamie <jamie.yjchen@gmail.com>
Date:   Mon Feb 15 20:52:22 2021 -0800

    change pictures for background

commit 570fa25d536b14f534393c494ec87bb584f48347
Author: Jamie <jamie.yjchen@gmail.com>
Date:   Mon Feb 15 20:21:12 2021 -0800

    updating cake images

commit 770f66a0803092016627d42b1a9f7ffc0e4ad009
Author: Jamie <jamie.yjchen@gmail.com>
Date:   Mon Feb 15 19:36:40 2021 -0800

    add owl carousel into project

commit b86f06f1eb6edccf65e76dea3cbdc6a0afe573ca
Author: Jamie <jamie.yjchen@gmail.com>
Date:   Sun Feb 14 20:54:15 2021 -0800

    convert nav list into js to create the menu

commit 2fe8ae3647f82e457a8fffe9a55b20ee4b917e3c
Author: Jamie <jamie.yjchen@gmail.com>
Date:   Sun Feb 14 20:23:11 2021 -0800

    convert contact form and created by js

commit cf644d333e100457acc92c26cadf852c5ac0d9ab
Author: Jamie <jamie.yjchen@gmail.com>
Date:   Sun Feb 14 20:16:06 2021 -0800

    fix line layout

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/jquery.gsap.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
         <title>Cake</title>
         <link rel="stylesheet" href="./css/main.css">
         <script src="./js/jsonFetcher.js"></script>
@@ -18,12 +19,7 @@
             <a href="#" class="logo">Cake<span>❤</span></a>
             <div class="menuToggle"></div>
             <ul class="navigation">
-                <li><a href="#banner">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#menu">Menu</a></li>
-                <li><a href="#chefs">Chefs</a></li>
-                <li><a href="#reviews">Reviews</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <!-- This section is created by js: navitaion.js -->
             </ul>
         </header>
 
@@ -69,7 +65,9 @@
                 1. Change this section to disney style load section
                 // 2. This section will be populated by program
              -->
-            <div class="menu-content"></div>
+            <div class="menu-content">
+                <!-- The content in here is created by js and load data from json file -->
+            </div>
 
             <div class="title">
                 <a href="#" class="button">View All</a>
@@ -92,7 +90,9 @@
                         <p>Porro atque aut praesentium sed harum deleniti similique necessitatibus!</p>
                     </div> 
                     
-                    <div class="portfiles"></div>
+                    <div class="portfiles">
+                        <!-- The content in here is created by js and load data from json file -->
+                    </div>
                 </div>
 
                 <div class="red-border"></div>            
@@ -105,13 +105,14 @@
             2. need to survey more designs to finalaize the looks
         -->
         <section id="reviews" class="reviews">
-            <div class="overlay"></div>
             <div class="title white">
                 <h2 class="titleText"><span>R</span>eviews</h2>
                 <p>Porro atque aut praesentium sed harum deleniti similique necessitatibus!</p>
             </div>
 
-            <div class="reviews-content"></div>
+            <div class="reviews-content">
+                <!-- The content in here is created by js and load data from json file -->
+            </div>
         </section>
 
         <!-- Contact -->
@@ -123,31 +124,7 @@
             </div>
 
             <form action="" class="contact-form">
-                <div class="lines"></div>
-                <h3>Order Form</h3>
-                <div class="singleForm">
-                    <input type="text" name="name" required>
-                    <label for="name">Name</label>
-                </div>
-
-                <div class="singleForm">
-                    <input type="text" name="phone" required>
-                    <label for="phone">Phone</label>
-                </div>
-
-                <div class="singleForm">
-                    <input type="email" name="email" required>
-                    <label for="email">Email</label>
-                </div>
-
-                <div class="singleForm">
-                    <textarea type="text" name="message" required></textarea>
-                    <label for="message">Message</label>
-                </div>
-
-                <div class="submit-button">
-                    <input type="submit" value="Send">
-                </div>
+                <!-- The content in here is created by js: form.js -->
             </form>
         </section>
 
@@ -165,6 +142,7 @@
     </template>
 
     <!-- controls the toggle menu and nav bar -->
+    <script src="./js/navigation.js"></script>
     <script src="./js/main.js"></script>
     <!-- menu lists -->
     <script>
@@ -218,6 +196,7 @@
         fetchJson("./json/reviews.json", "reviews", function(reviewList) {
             if (reviewList.length > 0) {
                 let reviewContent = document.querySelector(".reviews-content");
+                reviewContent.classList.add("owl-carousel");
                 let template = document.querySelector("template");
                 
                 reviewList.forEach(review => {
@@ -235,7 +214,29 @@
 
                     reviewContent.append(clone)
                 });
+
+                $(".reviews-content").owlCarousel({
+                    responsive: {
+                        0: {
+                            items: 1,
+                            nav: false
+                        },
+                        600: {
+                            items: 2,
+                            nav: false
+                        },
+                        1000: {
+                            items: 3,
+                            nav: false
+                        }
+                    },
+                    autoplay: true,
+                    loop: true,
+                    autoplayTimeout: 2000,
+                    autoplayHoverPause: true
+                });
             }
         });
     </script>
+    <script src="./js/form.js"></script>
 </html>
