fix chief layout

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             <div class="chefs-bg">                
                 <div class="border-top"></div>
                 <div class="border-bottom"></div>
+                <div class="border-right"></div>
                 <div class="chef-bg">
                     <div class="title">
                         <h2 class="titleText"><span>C</span>hiefs</h2>
@@ -95,7 +96,7 @@
                     </div>
                 </div>
 
-                <div class="red-border"></div>            
+                <div class="border-left"></div>            
             </div>
         </section>
 
