minor fix on scrolling looks

--- a/index.html
+++ b/index.html
@@ -229,6 +229,10 @@
                         1000: {
                             items: 3,
                             nav: false
+                        },
+                        1600: {
+                            items: 4,
+                            nav: false
                         }
                     },
                     autoplay: true,
